Qb Report changes,ward rquest chnges,Channel changes Signed-off-by: HNDITDushan <s.t.dushan@gmail.com>

--- a/src/main/webapp/bill_all_view.xhtml
+++ b/src/main/webapp/bill_all_view.xhtml
@@ -381,7 +381,14 @@
 
                                     <p:column>
                                         <f:facet name="header">Paid Value</f:facet>
-                                        <h:outputLabel value="#{bip.paidValue}"/>
+                                        <p:cellEditor>
+                                            <f:facet name="output" >
+                                                <h:outputLabel value="#{bip.paidValue}"/>
+                                            </f:facet>
+                                            <f:facet name="input" >
+                                                <p:inputText value="#{bip.paidValue}"/>
+                                            </f:facet>
+                                        </p:cellEditor>
                                     </p:column>
 
                                     <p:column headerText="Payee">
