--- a/src/main/webapp/dataAdmin/report_entered_data.xhtml
+++ b/src/main/webapp/dataAdmin/report_entered_data.xhtml
@@ -49,9 +49,10 @@
                             </h:panelGrid>
 
                             <h:panelGrid columns="1">
-                                <p:panel header="Credit Company" style="width: 400px;margin: auto;" collapsed="true" toggleable="true">
+                                <p:panel header="Institution (Credit Company/Agency/Collection Cnters)" style="width: 400px;margin: auto;" collapsed="true" toggleable="true">
                                     <h:panelGrid columns="1">
                                         <p:commandButton styleClass="linkButton" ajax="false" value="Credit Card Compaies" action="credit_companies" onclick="onSubmitButton();"/> 
+                                        <p:commandButton styleClass="linkButton" ajax="false" value="Institution Report(Credit Company/Agency/Collection Cnters/etc.)" action="instituton_by_institution_type" onclick="onSubmitButton();"/> 
                                     </h:panelGrid>
                                 </p:panel>
                                 <p:panel header="Item Master" style="width: 400px;margin: auto;" collapsed="true" toggleable="true">
