--- a/src/main/webapp/inward/inward_timed_item_category.xhtml
+++ b/src/main/webapp/inward/inward_timed_item_category.xhtml
@@ -44,6 +44,8 @@
                                 <h:panelGrid id="gpDetailText" columns="2">
                                     <h:outputText id="lblName" value="Name" ></h:outputText>
                                     <h:inputText autocomplete="off" id="txtName" value="#{timedItemCategoryController.current.name}"  ></h:inputText>
+                                    <h:outputText id="lblDes" value="Income Name" ></h:outputText>
+                                    <h:inputText autocomplete="off" id="txtDes" value="#{timedItemCategoryController.current.description}"  ></h:inputText>
 
                                 </h:panelGrid>
                                 <h:panelGrid id="gpDetailButtons" columns="2">
