--- a/src/main/webapp/ward/ward_pharmacy_reprint_bht_issue_request.xhtml
+++ b/src/main/webapp/ward/ward_pharmacy_reprint_bht_issue_request.xhtml
@@ -12,7 +12,7 @@
             <p:panel >
                 <f:facet name="header" >
                     <h:outputLabel value="Inward Pharmacy Request Reprint" ></h:outputLabel>
-                    <p:commandButton ajax="false" action="/ward/ward_pharmacy_bht_issue_request_bill_search"  value="Requested List"/>
+                    <!--<p:commandButton ajax="false" action="/ward/ward_pharmacy_bht_issue_request_bill_search"  value="Requested List"/>-->
                     <p:commandButton value="Reprint" ajax="false" >
                         <p:printer target="gpBillPreview" ></p:printer>
                     </p:commandButton>
