--- a/src/main/webapp/channel/channel_report_consultant_month_count_1.xhtml
+++ b/src/main/webapp/channel/channel_report_consultant_month_count_1.xhtml
@@ -6,7 +6,8 @@
                 xmlns:f="http://java.sun.com/jsf/core"
                 xmlns:h="http://java.sun.com/jsf/html"
                 xmlns:ch="http://java.sun.com/jsf/composite/channel"
-                xmlns:pe="http://primefaces.org/ui/extensions">
+                xmlns:pe="http://primefaces.org/ui/extensions"
+                xmlns:au="http://java.sun.com/jsf/composite/autocomplete">
 
     <ui:define name="content">
 
@@ -29,6 +30,16 @@
                         <h:outputLabel value="To Date"/>
                         <p:calendar value="#{channelReportTempController.toDate}" navigator="true" pattern="dd MMM yyyy hh:mm:ss a" styleClass="dateTimePicker" >
                         </p:calendar>
+                        <h:outputLabel value="Staff"/>
+                        <p:autoComplete minQueryLength="2"  style="width: 400px;"
+                                        forceSelection="true" placeholder="Staff"
+                                        value="#{channelReportTempController.reportKeyWord.staff}" id="scStaff"
+                                        completeMethod="#{channelStaffPaymentBillController.completeStaff}" var="mys" 
+                                        itemLabel="#{mys.person.nameWithTitle}" itemValue="#{mys}"
+                                        converter="stfcon"   >                                            
+                        </p:autoComplete>
+                        <h:outputLabel value="Specility"/>
+                        <au:completeSpeciality value="#{channelReportTempController.reportKeyWord.speciality}" />
                     </h:panelGrid>
                     <h:panelGrid columns="2" id="pg1" >
                         <h:outputLabel value="By Date"/> 
@@ -42,28 +53,28 @@
                     </h:panelGrid>
                 </p:panel>
                 <p:panel id="reportPrint" >
-<!--                    <table border="1" style="border: 1px solid black;">
-                        <tr>
-                            <th>Consultant</th>
-                            <ui:repeat value="#{channelReportTempController.headers}" var="h" >
-                                <th style="white-space: nowrap;">
-                                    #{h}
-                                </th>
-                            </ui:repeat>
-                        </tr>
-                        <ui:repeat value="#{channelReportTempController.channelDoctorCountsRows}" var="d" >
-                            <tr>
-                                <td style="white-space: nowrap;">
-                                    #{d.staff.person.name} 
-                                </td>
-                                <ui:repeat value="#{d.counts}" var="c" >
-                                    <td >
-                                        <center>#{c}</center>
-                                    </td>
-                                </ui:repeat>
-                            </tr>
-                        </ui:repeat>
-                    </table>-->
+                    <!--                    <table border="1" style="border: 1px solid black;">
+                                            <tr>
+                                                <th>Consultant</th>
+                                                <ui:repeat value="#{channelReportTempController.headers}" var="h" >
+                                                    <th style="white-space: nowrap;">
+                    #{h}
+                </th>
+            </ui:repeat>
+        </tr>
+        <ui:repeat value="#{channelReportTempController.channelDoctorCountsRows}" var="d" >
+            <tr>
+                <td style="white-space: nowrap;">
+                    #{d.staff.person.name} 
+                </td>
+                <ui:repeat value="#{d.counts}" var="c" >
+                    <td >
+                        <center>#{c}</center>
+                    </td>
+                </ui:repeat>
+            </tr>
+        </ui:repeat>
+    </table>-->
                     <p:dataTable id="tbl1" value="#{channelReportTempController.channelDoctorCountsRows}" var="s">
                         <p:column>
                             <f:facet name="header">
