--- a/src/main/webapp/inward/inward_administration.xhtml
+++ b/src/main/webapp/inward/inward_administration.xhtml
@@ -40,7 +40,7 @@
                         <p:panel header="Manage Time-based Services">
                             <p:panelGrid columns="1">
                                 <p:commandButton value="Manage Timebased Service Categogries" action="inward_timed_item_category" onclick="onSubmitButton();"  style="alignment-adjust: auto"></p:commandButton>
-                                <p:commandButton value="Manage Timebased Services" action="inward_timed_item" onclick="onSubmitButton();" ></p:commandButton>
+                                <p:commandButton value="Manage Timebased Services" action="inward_timed_item" onclick="onSubmitButton();" actionListener="#{timedItemController.prepareAdd()}" ></p:commandButton>
                                 <p:commandButton value="Manage Timebased Services (Theatre Only)" action="inward_timed_item_theatre_only" onclick="onSubmitButton();" ></p:commandButton>
                                 <p:commandButton value="Manage Timebased Services (Inward Only)" action="inward_timed_item_inward_only" onclick="onSubmitButton();" ></p:commandButton>
                                 <p:commandButton value="Manage Timebased Services Charges" action="inward_timed_item_fee" onclick="onSubmitButton();" ></p:commandButton>
