--- a/src/main/webapp/inward/inward_timed_item_theatre_only.xhtml
+++ b/src/main/webapp/inward/inward_timed_item_theatre_only.xhtml
@@ -74,6 +74,12 @@
                                         <f:selectItem itemLabel="Please select Charge"/>
                                         <f:selectItems value="#{enumController.inwardChargeTypesForSetting}" var="i" itemLabel="#{i.label}" itemValue="#{i}"/>
                                     </p:selectOneMenu>
+                                    
+                                    <h:outputText value="Category" ></h:outputText>
+                                    <p:selectOneMenu id="cmbCat" value="#{timedItemController.current.category}" >
+                                        <f:selectItem itemLabel="Please select a Category"/>
+                                        <f:selectItems value="#{timedItemCategoryController.items}" var="cat" itemLabel="#{cat.name}" itemValue="#{cat}" />
+                                    </p:selectOneMenu>
 
                                     <h:outputText value="" ></h:outputText>
                                     <p:selectBooleanCheckbox value="#{timedItemController.current.userChangable}" itemLabel="Can change Rate"/>
