--- a/src/main/webapp/ward/ward_pharmacy_bht_issue_request_bill.xhtml
+++ b/src/main/webapp/ward/ward_pharmacy_bht_issue_request_bill.xhtml
@@ -26,7 +26,13 @@
 
                     <p:panel rendered="#{!pharmacySaleBhtController.billPreview}" style="width: fit-content;" >
 
-
+                        <h:panelGroup id="panelError" >
+                            <h:panelGroup  
+                                rendered="#{pharmacySaleBhtController.errorMessage ne null}"
+                                style="background-color: yellow; color: red; display: block; margin: 2px; border: 1px solid red; padding: 3px; width: 95%;">
+                                <p:outputLabel value="#{pharmacySaleBhtController.errorMessage}" ></p:outputLabel>
+                            </h:panelGroup>
+                        </h:panelGroup>
 
                         <h:panelGrid id="sale" columns="1" class="alignTop" style="width: fit-content;">
                             <p:panel style="width: fit-content;">
@@ -116,7 +122,7 @@
                                                             </p:column>
                                                             <p:column headerText="Stocks">
                                                                 <h:outputLabel value="#{i.stock}" >
-                                                                    <f:convertNumber pattern="#,###" ></f:convertNumber>
+                                                                    <f:convertNumber pattern="#,###.00" ></f:convertNumber>
                                                                 </h:outputLabel>
                                                             </p:column>
                                                             <p:column headerText="Generic">
@@ -145,7 +151,7 @@
                                                     </h:panelGrid>
 
                                                     <p:commandButton  accesskey="a" id="btnAdd" value="Add" 
-                                                                      action="#{pharmacySaleBhtController.addBillItem}" process="@this acStock txtQty" update=":#{p:component('tblBillItem')} acStock focusItem" onclick="onSubmitButton();"  ></p:commandButton>
+                                                                      action="#{pharmacySaleBhtController.addBillItem}" process="@this acStock txtQty" update=":#{p:component('tblBillItem')} acStock focusItem :#{p:component('panelError')}" onclick="onSubmitButton();"  ></p:commandButton>
 
                                                     <p:focus id="focusQty" for="txtQty" ></p:focus>
                                                     <p:focus id="focusItem" for="acStock" ></p:focus>
@@ -177,14 +183,14 @@
                                                                     </f:facet>  
                                                                 </p:cellEditor> 
                                                             </p:column>
-                                                            <p:column headerText="Descreption">
+                                                            <p:column headerText="Derections" style="color: red;">
                                                                 <p:cellEditor>  
                                                                     <f:facet name="output">  
                                                                         <h:outputText value="#{bi.descreption}" >
                                                                         </h:outputText>
                                                                     </f:facet>  
                                                                     <f:facet name="input">  
-                                                                        <p:inputText autocomplete="off" id="ipTblDis" value="#{bi.descreption}" style="width:96%"/>  
+                                                                        <p:inputText placeholder="bd/tds/6 hourly" autocomplete="off" id="ipTblDis" value="#{bi.descreption}" style="width:96%"/>  
                                                                     </f:facet>  
                                                                 </p:cellEditor> 
                                                             </p:column>
@@ -192,19 +198,19 @@
                                                             <p:column style="width:6%">  
                                                                 <p:rowEditor />  
                                                             </p:column>  
-                                                            <p:column headerText="P.R.">
+<!--                                                            <p:column headerText="P.R.">
                                                                 <h:outputLabel value="#{bi.pharmaceuticalBillItem.itemBatch.purcahseRate}" >
                                                                     <f:convertNumber pattern="#,##0.00" />
                                                                 </h:outputLabel>
 
                                                             </p:column>
-                                                            <p:column headerText="R.S.R.">
+                                                            <p:column headerText="R.S.R." >
                                                                 <h:outputLabel value="#{bi.pharmaceuticalBillItem.itemBatch.retailsaleRate}" >
                                                                     <f:convertNumber pattern="#,##0.00" />
                                                                 </h:outputLabel>
 
-                                                            </p:column>
-                                                            <p:column headerText="Expiry">
+                                                            </p:column>-->
+                                                            <p:column headerText="Expiry" >
                                                                 <h:outputLabel value="#{bi.pharmaceuticalBillItem.itemBatch.dateOfExpire}" >
                                                                     <f:convertDateTime pattern="dd MM yyyy" ></f:convertDateTime>
                                                                 </h:outputLabel>
