payslip changes,Qb report changes,opd bill Qty request Signed-off-by: HNDITDushan <s.t.dushan@gmail.com>

--- a/src/main/webapp/bill_all_view.xhtml
+++ b/src/main/webapp/bill_all_view.xhtml
@@ -433,6 +433,9 @@
                                         <h:outputLabel value="#{bip21.bill.deptId} - " />
                                         <h:outputLabel value="#{bip21.bill.id}" />
                                     </p:column>
+                                    <p:column headerText="Ref">
+                                        <h:outputLabel value="#{bip21.paidForBillFee.bill.billType}" />
+                                    </p:column>
                                     <p:column headerText="bill edit">
                                         <p:cellEditor>
                                             <f:facet name="output" >
