--- a/src/main/webapp/hr/hr_staff_admin.xhtml
+++ b/src/main/webapp/hr/hr_staff_admin.xhtml
@@ -162,7 +162,7 @@
                                             <p:calendar id="cal" value="#{staffController.current.dateWithOutNotice}" pattern="dd MM yyyy" disabled="#{staffController.current.withOutNotice}" />
 
                                             <p:outputLabel value="Date Retired "/>
-                                            <p:calendar value="#{staffController.current.dateRetired}" pattern="dd MM yyyy" disabled="#{webUserController.hasPrivilege('HrEditRetiedDate')}" >
+                                            <p:calendar value="#{staffController.current.dateRetired}" pattern="dd MM yyyy" disabled="#{!webUserController.hasPrivilege('HrEditRetiedDate')}" >
                                             </p:calendar>
 
                                             <p:outputLabel value="Speciality" />
