--- a/src/main/webapp/pharmacy/pharmacy_report_grn_detail.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_report_grn_detail.xhtml
@@ -545,7 +545,7 @@
                             <f:facet name="header">  
                                 <h:outputLabel value="Referenace Institution"/>
                             </f:facet> 
-                            <h:outputLabel value="#{b.referenceInstitution.name}"/>
+                            <h:outputLabel value="#{b1.toInstitution.name}"/>
                         </p:column>
 
                         <p:column headerText="Cancelled At"   >
